[package]
name = "multiarb"
version = "0.1.0"
edition = "2024"

[dependencies]
# alloy = "1.0.12"
anyhow = "1.0.98"
futures = "0.3.31"
num-bigint = "0.4.6"
petgraph = "0.8.2"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = "1.45.1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tycho-client = "0.70.7"
tycho-common = "0.70.7"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", rev = "9cd12329a1d5f5f745f932bf81d06ed15562ab38" }
